--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@types/bcryptjs": "^2.4.6",
+    "@types/papaparse": "^5.5.2",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -23,12 +24,14 @@
     "next": "^16.0.10",
     "next-auth": "^4.24.13",
     "openai": "^6.9.1",
+    "papaparse": "^5.5.3",
     "prisma": "^5.22.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
     "react-markdown": "^10.1.0",
     "recharts": "^3.5.1",
+    "resend": "^6.6.0",
     "tailwind-merge": "^3.4.0",
     "yahoo-finance2": "^3.10.2",
     "zod": "^4.1.13"
