--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-markdown": "^10.1.0",
     "recharts": "^3.5.1",
     "resend": "^6.6.0",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "yahoo-finance2": "^3.10.2",
     "zod": "^4.1.13"
