--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/bcryptjs": "^2.4.6",
     "@types/papaparse": "^5.5.2",
     "bcryptjs": "^3.0.3",
@@ -30,9 +31,10 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
     "react-markdown": "^10.1.0",
-    "recharts": "^3.5.1",
+    "recharts": "^3.6.0",
     "resend": "^6.6.0",
     "sharp": "^0.34.5",
+    "stripe": "^20.1.0",
     "tailwind-merge": "^3.4.0",
     "yahoo-finance2": "^3.10.2",
     "zod": "^4.1.13"
