--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.555.0",
     "next": "^16.0.10",
     "next-auth": "^4.24.13",
+    "node-fetch": "^3.3.2",
     "openai": "^6.9.1",
     "papaparse": "^5.5.3",
     "prisma": "^5.22.0",
